# E-Commerce-Test-Suite

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  JOURNEY.md  MILESTONE_125.md  MILESTONE_232.md  MILESTONE_278.md  Makefile  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.backup
.github/workflows/: test-suite.yml
accessibility/: README.md
accessibility/tests/: test_accessibility.py
api_tests/clients/: base_client.py  demoblaze_client.py
api_tests/tests/: test_cart_order_api.py  test_products_api.py  test_user_api.py
config/: settings.py
integration/tests/: test_e2e_workflows.py
performance/: README.md
performance/locust/: locustfile.py
performance/tests/: test_performance.py
security/: README.md
security/tests/: test_security.py
ui_tests/pages/: base_page.py  cart_page.py  home_page.py  login_page.py  product_detail_page.py
ui_tests/tests/: test_additional_edge_cases.py  test_cart.py  test_home_edge_cases.py  test_home_page.py  test_login.py  test_product_detail.py
utils/: logger.py
visual/: README.md
visual/tests/: test_visual_regression.py
visual/utils/: screenshot_compare.py
